--- a/hjem.html
+++ b/hjem.html
@@ -1,16 +1,16 @@
 <div>
     <h3>Velkommen til Kodeklubb!</h3>
         <p>
-	    Høsten 2014 skal vi for første gang holde kodeklubb på Røa bibliotek. I det første kurset skal vi lære programmeringsspråket Scratch.
-	    Dette er et programmeringsspråk spesielt utviklet for barn som vil lære seg å programmere. Gjennom å lage en rekke dataspill skal vi
-	    lære alle de viktigste prinsippene i all programmering! Ta en titt på <a href="http://kidsakoder.no">Lær Kida Koding</a> for mer info
+	    Høsten 2014 skal vi for første gang holde kodeklubb på Røa bibliotek. I det første kurset skal vi lære programmeringsspråket <a href="http://scratch.mit.edu">Scratch</a>.
+	    Dette er et programmeringsspråk spesielt utviklet for barn og unge. Gjennom å lage en rekke dataspill skal vi
+	    lære alle de viktigste prinsippene i all programmering! Ta en titt på <a href="http://kidsakoder.no">Lær Kidsa Koding</a> for mer info
 	    om vår filosofi.
         </p>
 	
     <h4>Hvem kan delta?</h4>
 	<p>
 	    Det første kurset er ment for barn i alderen 8-12 år som har minst bittelitt erfaring med Scratch. Hvis du aldri har brukt Scratch før
-	    anbefaler vi enten å melde deg på nybegynner kurs på Majorstua bibliotek, eller å se litt på <a href="http://scratch.mit.edu.com">Scratch</a>
+	    anbefaler vi enten å melde deg på nybegynnerkurs på Majorstua bibliotek, eller å se litt på <a href="http://scratch.mit.edu.com">Scratch</a>
 	    på egenhånd før kurstart [det holder å få seg en konto og se litt på prosjektet "Felix og Herbert" under PROSJEKTER]. 
 	</p>
     
