--- a/kalender.html
+++ b/kalender.html
@@ -13,22 +13,18 @@
 	    $('#calendar').fullCalendar({
                 height: 650,
     		defaultDate: '2014-10-01',
-                events: [{title: "Kurs 16:00-17:30",
-                        start: "2014-10-07"},
-                        {title: "Kurs",
-                        start: "2014-10-14"},
-                        {title: "Kurs",
-                        start: "2014-10-21"},
-                        {title: "Kurs",
-                        start: "2014-10-28"},
-                        {title: "Kurs",
-                        start: "2014-11-04"},
-                        {title: "Kurs",
-                        start: "2014-11-11"},
-                        {title: "Kurs",
-                        start: "2014-11-18"},
-                        {title: "Kurs",
-                        start: "2014-11-25"}],
+                events: [{title: "Kodeklubb 16:00-17:30",
+                        start: "2014-10-22"},
+                        {title: "Kodeklubb 16:00-17:30",
+                        start: "2014-10-29"},
+                        {title: "Kodeklubb 16:00-17:30",
+                        start: "2014-11-05"},
+                        {title: "Kodeklubb 16:00-17:30",
+                        start: "2014-11-12"},
+                        {title: "Kodeklubb 16:00-17:30",
+                        start: "2014-11-19"},
+                        {title: "Kodeklubb 16:00-17:30",
+                        start: "2014-11-26"}],
 	    	editable: false,
     		eventLimit: true, // allow "more" link when too many events
                 selectable: false,
