--- a/prosjekter.html
+++ b/prosjekter.html
@@ -4,19 +4,21 @@ Her er en oversikt over noen prosjekter som andre kodeklubber har derevet med og
 
 <h4>Våre prosjekter</h4>
     <ul>
-        <li><a href="norgestur.pdf">Norgestur</a> - her skal du styre et helikopter rundt omkring et norgeskart for å finne byer du kanskje ikke vet hvor er!</li>
+        <li><a href="http://kodeklubben.github.io/nb-NO/scratch.1/04/norgestur.html">Norgestur</a> - her skal du styre et helikopter rundt omkring et norgeskart for å finne byer du kanskje ikke vet hvor er!</li>
+        <li>Hopp Hero</li>
+        <li>3DFlakser</li>
     </ul>
 
 <h4>Andre prosjekter</h4>
     <ul>
-        <li><a href="felix_og_herbert.pdf">Felix og Herbert</a> er et enkelt spill hvor musen Herbert skal unngå å bli spist av musen Felix</li>
-        <li><a href="krabbeangrep.pdf">Krabbeangrep!</a> er et Space Invaders type spill hvor romskipet skal navigere seg gjennom rommet og unngå å bli truffet av romvesenkrabber</li>
-        <li><a href="flaksefugl.pdf">Flaksefugl</a> er et Flappy Bird type spill der fuglen skal flakse gjennom tilfeldig plasserte rør</li>
-        <li><a href="spokelsesjakten.pdf">Spøkelsesjakten</a> er et klikk og forsvinn spill der du skal klikke bort spøkelsene som dukker opp på skjærmen</li>
+        <li><a href="http://kodeklubben.github.io/nb-NO/scratch_cc.1/01/felix_og_herbert.html">Felix og Herbert</a> er et enkelt spill hvor musen Herbert skal unngå å bli spist av katten Felix</li>
+        <li><a href="http://kodeklubben.github.io/nb-NO/scratch.1/03/Krabbeangrep.html">Krabbeangrep!</a> er et Space Invaders type spill hvor romskipet skal navigere seg gjennom rommet og unngå å bli truffet av romvesenkrabber</li>
+        <li><a href="http://kodeklubben.github.io/nb-NO/scratch_cc.1/11/flaksefugl.html">Flaksefugl</a> er et Flappy Bird type spill der fuglen skal flakse gjennom tilfeldig plasserte rør</li>
+        <li><a href="http://kodeklubben.github.io/nb-NO/scratch_cc.1/02/spokelsesjakten.html">Spøkelsesjakten</a> er et klikk og forsvinn spill der du skal klikke bort spøkelsene som dukker opp på skjærmen</li>
     </ul>
 
 <h4>Intro til programmering</h4>
 <p>
-<a href="intro_til_programmering.pdf">Her</a> finner du et skriv hvor det står litt om de mest fundamentale konseptene innen programmering. Dette
+<a href="http://kodeklubben.github.io/nb-NO/scratch.1/intro_til_programmering.html">Her</a> finner du et skriv hvor det står litt om de mest fundamentale konseptene innen programmering. Dette
 kan være nyttig for deg hvis du sitter fast i en oppgave.
 </p>
