--- a/prosjekter.html
+++ b/prosjekter.html
@@ -5,8 +5,8 @@ Her er en oversikt over noen prosjekter som andre kodeklubber har derevet med og
 <h4>Våre prosjekter</h4>
     <ul>
         <li><a href="http://kodeklubben.github.io/nb-NO/scratch.1/04/norgestur.html">Norgestur</a> - her skal du styre et helikopter rundt omkring et norgeskart for å finne byer du kanskje ikke vet hvor er!</li>
-        <li>Hopp Hero</li>
-        <li>3DFlakser</li>
+        <li>Hoppehelt</li>
+        <li>3D-Flakser</li>
     </ul>
 
 <h4>Andre prosjekter</h4>
