--- a/kalender.html
+++ b/kalender.html
@@ -13,17 +13,17 @@
 	    $('#calendar').fullCalendar({
                 height: 650,
     		defaultDate: '2014-10-01',
-                events: [{title: "Kodeklubb 16:00-17:30",
+                events: [{title: "Klubb 16:00-17:30",
                         start: "2014-10-22"},
-                        {title: "Kodeklubb 16:00-17:30",
+                        {title: "Klubb 16:00-17:30",
                         start: "2014-10-29"},
-                        {title: "Kodeklubb 16:00-17:30",
+                        {title: "Klubb 16:00-17:30",
                         start: "2014-11-05"},
-                        {title: "Kodeklubb 16:00-17:30",
+                        {title: "Klubb 16:00-17:30",
                         start: "2014-11-12"},
-                        {title: "Kodeklubb 16:00-17:30",
+                        {title: "Klubb 16:00-17:30",
                         start: "2014-11-19"},
-                        {title: "Kodeklubb 16:00-17:30",
+                        {title: "Klubb 16:00-17:30",
                         start: "2014-11-26"}],
 	    	editable: false,
     		eventLimit: true, // allow "more" link when too many events
