--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 		
 		<div id="meny">
 			<div class="knapp" id="hjem">
-				HJEM
+				hjem
 			</div>
 			<div class="knapp" id="prosjekter">
-				PROSJEKTER
+				prosjekter
 			</div>
 			<div class="knapp" id="kalender">
-				KALENDER
+				kalender
 			</div>
 		</div>
 	</div>
