--- a/hjem.html
+++ b/hjem.html
@@ -3,7 +3,7 @@
         <p>
 	    Høsten 2014 skal vi for første gang holde kodeklubb på Røa bibliotek. I det første kurset skal vi lære programmeringsspråket <a href="http://scratch.mit.edu">Scratch</a>.
 	    Dette er et programmeringsspråk spesielt utviklet for barn og unge. Gjennom å lage en rekke dataspill skal vi
-	    lære alle de viktigste prinsippene i all programmering! Ta en titt på <a href="http://kidsakoder.no">Lær Kidsa Koding</a> for mer info
+	    lære oss de viktigste prinsippene i programmering! Ta en titt på <a href="http://kidsakoder.no">Lær Kidsa Koding</a> for mer info
 	    om vår filosofi.
         </p>
 	
@@ -11,7 +11,7 @@
 	<p>
 	    Det første kurset er ment for barn i alderen 8-12 år som har minst bittelitt erfaring med Scratch. Hvis du aldri har brukt Scratch før
 	    anbefaler vi enten å melde deg på nybegynnerkurs på Majorstua bibliotek, eller å se litt på <a href="http://scratch.mit.edu.com">Scratch</a>
-	    på egenhånd før kurstart [det holder å få seg en konto og se litt på prosjektet "Felix og Herbert" under PROSJEKTER]. 
+	    på egenhånd før kurstart [det holder å få seg en konto og se litt på prosjektet "Felix og Herbert" under prosjekter]. 
 	</p>
     
     <h4>Hva må jeg ha med meg?</h4>
@@ -21,7 +21,7 @@
     
     <h4>Når er det kodeklubb?</h4>
 	<p>
-	    Kodeklubbene vil foregå på onsdager kl 16:00-17:30 i oktober og november. Se KALENDER for mer.
+	    Kodeklubbene vil foregå på onsdager kl 16:00-17:30 i oktober og november. Se kalender for mer.
 	</p>
 	
     Hilsen <a href="http://scratch.mit.edu/users/gubbisduff">Gudbrand</a> og <a href="http://scratch.mit.edu/users/geirarne">Geir Arne</a>
